PS-9314 fix: Signal 11 when using JSON_TABLE

https://perconadev.atlassian.net/browse/PS-9314

As part of the 8.0.22 merge we added our fix (commit e29ddfe) for
Oracle's Bug #101401
"ISNULL continously returns the same value for LOAD_FILE"
(https://bugs.mysql.com/bug.php?id=101401)
However, when Oracle fixed the same issue in 8.0.23,
Bug #32096341
"ISNULL continuously returns the same value for LOAD_FILE"
(commit mysql/mysql-server@de4b3f7), ou fix never got reverted,
which introduced this regression.

Fixed by reverting our patch.

Extended 'main.func_str' MTR test case with additional checks for this
particular regression.